--- a/shop/src/index.css
+++ b/shop/src/index.css
@@ -14,6 +14,9 @@ body {
     width: 1280px;
     margin: 50px auto;
 }
+header {
+    position: relative;
+}
 header .logo {
     font-weight: 600;
     font-size:  20px;
@@ -59,6 +62,29 @@ header .presentation::before {
     font-size: 15px;
     font-weight: 300px;
     color:  #fff;
+}
+header .shop-cart-button {
+    float: right;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    transition: color, transform 500ms ease;
+}
+header .shop-cart-button:hover,
+header .shop-cart-button.active {
+    color: #dc3d3d;
+    transform: scale(1.3);
+}
+header .shop-cart {
+    position: absolute;
+    top: 30px;
+    right: 0;
+    width: 450px;
+    background-color: #fafafa;
+    -webkit-box-shadow: 4px 5px 15px -7px #606060;
+    box-shadow: 4px 5px 15px -7px #606060;
+    z-index: 1000;
+
 }
 
 main {
