--- a/shop/src/index.css
+++ b/shop/src/index.css
@@ -98,11 +98,38 @@ main .item {
     margin-bottom: 50px;
     background: #f5f5f5;
     overflow: hidden;
+    position: relative;
 }
 main .item img {
     width: 100%;
     border-radius: 10px 10px 0 0;
     transition: transform 500ms ease;
+    height: 300px;
+}
+main h2, main p, main b {
+    margin: 10px 20px;
+}
+main b {
+    color: #5fa36a;
+    padding-bottom: 20px;
+}
+.add-to-cart {
+    height: 30px;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dc3d3d;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+    cursor: pointer;
+   transition: 500ms;
+}
+main .add-to-cart:hover {
+  transform: scale(1.3);
 }
 main .item img:hover {
     transform: scale(1.05);
