--- a/shop/src/index.css
+++ b/shop/src/index.css
@@ -76,17 +76,44 @@ header .shop-cart-button.active {
     transform: scale(1.3);
 }
 header .shop-cart {
+    margin-top: 5px;
     position: absolute;
     top: 30px;
     right: 0;
     width: 450px;
     background-color: #fafafa;
+    text-align: center;
+    border: #222 1px solid;
     -webkit-box-shadow: 4px 5px 15px -7px #606060;
     box-shadow: 4px 5px 15px -7px #606060;
     z-index: 1000;
-
+}
+header .shop-cart p {
+    color: #5fa36a; 
+    font-weight: 400;
+    padding-top: 3px;
+    text-align: center;
+}
+header .shop-cart h3 {
+    text-align: center;
 }
 
+.delete-item {
+    font-weight: 600;
+    font-size: 25px;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px; /* Выравнивание по центру по вертикали */
+    margin-top: 3px;
+}
+
+.item-oreder {
+    display: flex;
+    gap: 15px;
+    margin: 5px;    
+}
 main {
     display: flex;
     width: 100%;
@@ -99,6 +126,21 @@ main .item {
     background: #f5f5f5;
     overflow: hidden;
     position: relative;
+}
+.buy-btn {
+    padding: 5px;
+    background-color:  #5fa36a;
+    color: #ffff;
+    font-weight: 400px;
+    font-size: 16px;
+    border: none;
+    border-radius: 3%;
+    margin: 10px auto;
+    transition: 500ms;
+    text-align: center;
+}
+.buy-btn:hover {
+    transform:scale(1.1)
 }
 main .item img {
     width: 100%;
@@ -128,6 +170,13 @@ main b {
     cursor: pointer;
    transition: 500ms;
 }
+.delete {
+    background-color: #dc3d3d;
+}
+.add {
+    background-color: #5fa36a;
+}
+
 main .add-to-cart:hover {
   transform: scale(1.3);
 }
